--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.5",
+    "@angular/animations": "^14.2.12",
+    "@angular/cdk": "^15.0.3",
     "@angular/common": "^14.2.5",
     "@angular/compiler": "^14.2.5",
     "@angular/core": "^14.2.5",
     "@angular/forms": "^14.2.5",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "^14.2.5",
     "@angular/platform-browser-dynamic": "^14.2.5",
     "@angular/router": "^14.2.5",
@@ -24,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "angular-material": "^1.2.5",
     "bootstrap": "^5.2.2",
     "ngx-mask": "^14.2.3",
     "rxjs": "~7.5.0",
@@ -32,7 +35,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.5",
-    "@angular/cli": "^14.2.5",
+    "@angular/cli": "^12.2.18",
     "@angular/compiler-cli": "^14.2.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
